@@ -1,6 +1,9 @@
 Changes relative to tre-0.20:
-  * TRE-ELEMENT: All event methods have been replaced by
-    method ON, like done with jQuery.
+  * TRE-ELEMENT:
+    * All event methods have been replaced by method ON, like
+      done in jQuery.
+    * Historic class, ID and name attribute methods have been
+      removed.
   * LOAD-STRING is now READ-FROM-STRING.
   * CONCAT-STRINGTREE is now FLATTEN.
   * QUASIQUOTE-SPLICE turns JavaScript objects into keyword/
